Update azure-pipelines.yml for Azure Pipelines

--- a/deployment/azure-pipelines.yml
+++ b/deployment/azure-pipelines.yml
@@ -105,4 +105,6 @@ stages:
                 command: 'upgrade'
                 chartType: 'FilePath'
                 chartPath: 'deployment/chart/spring-petclinic'
-                overrideValues: image.tag=$(imageSHA)
+                releaseName: 'spc'
+                overrideValues: 'image.tag=$(imageSHA)'
+                arguments: '--create-namespace'
